--- a/app/views/users/account/edit.html.erb
+++ b/app/views/users/account/edit.html.erb
@@ -1,4 +1,4 @@
-
+<%= stylesheet_link_tag 'front/user/infos', media: 'all', 'data-turbolinks-track' => true %>
 <div class="row">
   <div class="col-md-12">
     <h1>Editer mes informations</h1>
