--- a/app/views/users/account/notifications.html.erb
+++ b/app/views/users/account/notifications.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'front/user/infos', media: 'all', 'data-turbolinks-track' => true %>
 <h1>Notifications</h1>
 <section class="content-header">
   <% if @notifications.count > 0 %>
