--- a/app/views/users/account/sondages.html.erb
+++ b/app/views/users/account/sondages.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'front/user/infos', media: 'all', 'data-turbolinks-track' => true %>
 <div class="row">
   <div class="col-sm-12">
     <div id="user-block_title">
