--- a/app/assets/stylesheets/front/articles/index.scss
+++ b/app/assets/stylesheets/front/articles/index.scss
@@ -1,7 +1,3 @@
-body {
-  padding-top: 100px;
-}
-
 header {
   text-align: center;
   background-color: rgb(255, 235, 228);
@@ -198,6 +194,7 @@ article:first-child {
     margin-left: 40px;
     margin-top: 40px;
     height: 250px;
+
   }
   .article-item-left {
     position: relative;
@@ -206,6 +203,10 @@ article:first-child {
     padding-left: 20px;
     padding-right: 20px;
     background-color: #E3E3E3;
+    text-align: center;
+    img {
+      max-height: 180px;
+    }
   }
   .article-item-right {
     position: relative;
