--- a/app/assets/stylesheets/front/home/_socials.scss
+++ b/app/assets/stylesheets/front/home/_socials.scss
@@ -1,16 +1,25 @@
 @import "../vars";
 #socials {
   min-height: 65vh;
+  padding-top: 5%;
   #oiseauMT{
+    height: 65vh;
     text-align: right;
     svg {
       position: absolute;
-      top: 0 ; left:0;
+      bottom: -15%;
+      left:0;
       width: 100%;
-      height:75vh;
+      height:65vh;
     }
   }
   #PanneauReseauxSociaux {
-
+    height: 65vh;
+    iframe {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      height: 65vh;
+    }
   }
 }
