--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -45,7 +45,7 @@
                   </div>
                   <div class="article-item-footer">
                       <span>Auteur: </span><span> <%= article.owner.username %></span>
-                      <span class="comments-style"><i class="fa fa-2x fa-comments-o"></i> <%= "#{article.comments.count}  Commentaire(s)" %></span>
+                      <span class="comments-style"><i class="fa fa-2x fa-comments-o"></i> <%= article.comments.count < 2 ? "#{article.comments.count} Commentaire" : "#{article.comments.count} Commentaires" %></span>
                       <span class="rezosocio"><a href= "#"><i class="fa fa-lg fa-facebook"></i></a><a href= "#"><i class="fa fa-lg fa-twitter"></i></a></span>
                   </div>
                 </div>
