--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,51 +1,116 @@
 <%= stylesheet_link_tag 'front/articles/show', media: 'all', 'data-turbolinks-track' => true %>
-<article class="article-one">
-  <h1><%= link_to @article.name, article_path( @article.friendly_id ) %></h1>
-  <p>
-    <%= @article.content %>
-  </p>
-  <ul>
-    <li>Créé le:  <%= @article.published_at %></li>
-    <li>Auteur:   <%= @article.owner.username %></li>
-    <li>Catégorie: <%= @article.category.name %></li>
-  </ul>
-</article>
-<section id="comments">
 
-  <% if user_signed_in? %>
-
-    <%= form_for :like, :url => likes_path(@article) do |f| %>
-      <input id="like[likeable_type]" name="like[likeable_type]" type="hidden" value="Article" />
-      <input id="like[likeable_id]" name="like[likeable_id]" type="hidden" value="<%= @article.id %>" />
-      <% if @article.likes.where(user: current_user).last %>
-        <%= f.submit "Je n'aime plus" %>
-      <% else %>
-        <%= f.submit "J'aime" %>
-      <% end %>
-    <% end %>
-
-    <%= form_for :comment, :url => article_comments_path(@article) do |f| %>
-      <input id="comment[commentable_type]" name="comment[commentable_type]" type="hidden" value="Article" />
-      <input id="comment[commentable_id]" name="comment[commentable_id]" type="hidden" value="<%= @article.id %>" />
-      <%= f.text_area :content, class: "form-control", rows: "6", cols: "100"%>
-      <%= f.submit :valider %>
-    <% end %>
-  <% end %>
-  <div class="comments-one">
-    <h2>Commentaires</h2>
-    <% @article.comments.each do | comment | %>
-        <% if comment.is_valid === true %>
-            <p>
-                <%= comment.content %>
-            </p>
-            <ul>
-              <li>par: <%= comment.user.username %></li>
-              <li>il y a: <%= time_ago_in_words(comment.created_at) %></li>
-            </ul>
-        <% elsif comment.user === current_user %>
-            <p>Votre commentaire est en attente de validation par un administrateur</p>
-        <% end %>
-    <% end %>
+<header>
+  <div class="container">
+    <div class="row" id="header">
+      <div id="article__arianne">
+        <ul>
+          <li><a href="#">Articles</a> <i class="fa fa-angle-right"></i></li>
+          <li><a href="#"><%= @article.category.name %></a> <i class="fa fa-angle-right"></i></li>
+          <li><a href="#"><%= @article.name %></a></li>
+        </ul>
+      </div>
+      <div id="article__title">
+        <a href="#" class="btn btn-primary"><%= @article.category.name %></a>
+        <h1><%= link_to @article.name, article_path( @article.friendly_id ) %></h1>
+      </div>
+      <div id="article__infos">
+        <ul>
+          <li>Par  <a href="#"><%= @article.owner.username %></a></li>
+          <li>Publié le  <%= time_tag @article.created_at, format: "%A %d %B %Y" %> </li>
+          <li><%= @article.comments.count < 2 ? "#{@article.comments.count} Commentaire" : "#{@article.comments.count} Commentaires" %></li>
+          <li><%= @article.likes.count %> <i class="fa fa-heart" aria-hidden="true"></i></li>
+        </ul>
+      </div>
+    </div>
   </div>
+</header>
 
-</section>
+<section id="content">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10">
+        <div id="linksShare">
+          <div class="row">
+            <div class="col-xs-4">
+              <a href="#" class="btn btn-facebook btn-facebook btn-block">Facebook</a>
+            </div>
+            <div class="col-xs-4">
+              <a href="#" class="btn btn-facebook btn-twitter btn-block">Twitter</a>
+            </div>
+            <div class="col-xs-4">
+              <% if user_signed_in? %>
+                <%= form_for :like, :url => likes_path(@article) do |f| %>
+                  <input id="like[likeable_type]" name="like[likeable_type]" type="hidden" value="Article" />
+                  <input id="like[likeable_id]" name="like[likeable_id]" type="hidden" value="<%= @article.id %>" />
+                  <% if @article.likes.where(user: current_user).last %>
+                    <%= button_tag( :class => "btn btn-support btn-block") do %>
+                    J'aime <i class="fa fa-check"></i>
+                    <% end %>
+                  <% else %>
+                    <%= f.submit "J'aime", class: "btn btn-support btn-block" %>
+                  <% end %>
+                <% end %>
+              <% end %>
+            </div>
+          </div>
+        </div>
+        <article class="article-one">
+          <div class="row">
+            <div class="col-xs-12">
+              <%= image_tag @article.thumb, class:"img-responsive" %>
+            </div>
+          </div>
+          <p>
+            <%= @article.content %>
+          </p>
+        </article>
+        <section id="comments">
+
+        <% if user_signed_in? %>
+
+          <%= form_for :comment, :url => article_comments_path(@article) do |f| %>
+            <input id="comment[commentable_type]" name="comment[commentable_type]" type="hidden" value="Article" />
+            <input id="comment[commentable_id]" name="comment[commentable_id]" type="hidden" value="<%= @article.id %>" />
+            <%= f.text_area :content, class: "form-control", rows: "6", cols: "100"%>
+            <%= f.submit :valider %>
+            <% end %>
+
+        <% end %>
+          <div class="comments-one">
+            <h2>Commentaires</h2>
+            <% @article.comments.each do | comment | %>
+              <div class="media">
+                <div class="media-left">
+                  <a href="#">
+                    <%= image_tag comment.user.avatar, class:"img-rounded", size:"75x75"%>
+                  </a>
+                </div>
+                <div class="media-body">
+                  <% if comment.is_valid === true %>
+                  <h4 class="media-heading"><%= time_ago_in_words(comment.created_at) %> par <%= comment.user.username %></h4>
+                  <%= comment.content %>
+                  <% elsif comment.user === current_user %>
+                      <p>Votre commentaire est en attente de validation par un administrateur</p>
+                  <% end %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+
+        </section>
+        </div>
+
+        <div class="col-md-2" id="sidebar">
+          <div>
+            <h3>Catégories :</h3>
+            <ul>
+              <li>Agriculture</li>
+              <li>Aide à la personne</li>
+              <li>High Tech</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
