--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -1,5 +1,4 @@
-<%= tinymce_assets %>
-<%= tinymce :language => "fr_FR" %>
+
 <div class="container">
   <div class="article_form">
     <%= form_for :articles, :url => admin_articles_path do |f| %>
@@ -32,3 +31,12 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+
+document.addEventListener("turbolinks:load", function() {
+  tinymce.remove();
+    tinyMCE.init({
+      selector: '.tinymce'
+    });
+})
+</script>
