--- a/app/views/admin/projects/edit.html.erb
+++ b/app/views/admin/projects/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <div class="project_show_card">
     <div class="project_show_card--title">
       <h1><%= @project.name %></h1>
@@ -8,47 +8,54 @@
         Projet créé le: <%= @project.created_at %> par <%= @project.owner.username %>
       </div>
     </div>
-  </div>
-  <div class="project_form">
-    <%= form_for :project, :url => admin_project_url(@project), method: 'put' do |f| %>
-      <div class="form-group">
-        <%= label_tag :category_id, 'Categorie' %>
-        <%= f.select :category_id, options_from_collection_for_select(@categories, "id", "name", @project.category.id), class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= label_tag 'name', 'Nom du projet' %>
-        <%= f.text_field(:name, size: 10, class: "form-control") %>
-      </div>
-      <div class="form-group">
-        <%= label_tag 'content', 'Description de votre projet' %>
-        <%= f.text_area :content, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= label_tag 'content', 'Localisation' %>
-        <%= f.text_area :location, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= label_tag 'content', 'Etat d\'avancement' %>
-        <%= f.text_area :state, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <%= f.label :thumb, 'Image'%>
-        <%= image_tag(@project.thumb ? @project.thumb : @project.category.image, size: "200x200", class:'img-responsive')%>
-        <div >
-          <%= f.file_field :thumb %>
+    <div class="project_form">
+      <%= form_for :project, :url => admin_project_url(@project), method: 'put' do |f| %>
+        <div class="form-group">
+          <%= label_tag :category_id, 'Categorie' %>
+          <%= f.select :category_id, options_from_collection_for_select(@categories, "id", "name", @project.category.id), class: "form-control" %>
         </div>
-      </div>
-      <%= f.submit :valider, class: "btn btn-primary" %>
-    <% end %>
-    <div class="form_errors">
-      <% if @project.errors.any? %>
-      <%= debug @project.errors.messages %>
+        <div class="form-group">
+          <%= label_tag 'name', 'Nom du projet' %>
+          <%= f.text_field(:name, size: 10, class: "form-control") %>
+        </div>
+        <div class="form-group">
+          <%= label_tag 'content', 'Description de votre projet' %>
+          <%= f.text_area :content, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= label_tag 'content', 'Localisation' %>
+          <%= f.text_area :location, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= label_tag 'content', 'Etat d\'avancement' %>
+          <%= f.text_area :state, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :thumb, 'Image'%>
+          <%= image_tag(@project.thumb ? @project.thumb : @project.category.image, size: "200x200", class:'img-responsive')%>
+          <div>
+            <%= f.file_field :thumb %>
+          </div>
+            <%= f.submit :valider, class: "btn btn-primary" %>
+        </div>
+      <% end %>
+      <div class="form_errors">
+        <% if @project.errors.any? %>
         <ul class="Signup_Errors">
-          <% @project.errors.messages.each do | key, value | %>
-            <li class="text-danger"> <%= value.last.html_safe %></li>
-          <% end %>
+        <% @project.errors.messages.each do | key, value | %>
+          <li class="text-danger"> <%= value.last.html_safe %></li>
+        <% end %>
         </ul>
       <% end %>
+      </div>
     </div>
   </div>
 </div>
+<script type="text/javascript">
+document.addEventListener("turbolinks:load", function() {
+  tinymce.remove();
+    tinyMCE.init({
+      selector: '.tinymce'
+    });
+})
+</script>
