--- a/app/views/admin/surveys/new.html.erb
+++ b/app/views/admin/surveys/new.html.erb
@@ -1,5 +1,3 @@
-<%= tinymce_assets %>
-<%= tinymce :language => "fr_FR" %>
 <section class="content-header">
   <h1>
     Sondages
@@ -12,42 +10,55 @@
   </ol>
 </section>
 <section class="content">
-  <div class="col-xs-12">
-    <div class="box">
-      <div class="box-title">
-        <h2>Créer un nouveau sondage</h2>
-      </div>
-      <div class="box-content">
-        <%= form_for :survey, url: admin_surveys_path do | f | %>
-          <div class="form-group">
-            <%= label_tag 'title', "Titre du sondage" %>
-            <%= f.text_field :title, class: "form-control" %>
-          </div>
-          <div class="form-group">
-            <%= label_tag 'survey[description]', "Description du sondage" %>
-            <%= f.text_area :description, :class => "tinymce", :rows => 25, :cols => 120 %>
-          </div>
-          <div class="form-group">
-            <%= label_tag 'start_at', "Début du sondage" %>
-            <%= f.date_field :start_at  %>
-          </div>
-          <div class="form-group">
-            <%= label_tag 'end_at', "Fin du sondage" %>
-            <%= f.date_field :end_at %>
-          </div>
-          <%= f.submit :valider, class: "btn btn-primary" %>
-        <% end %>
-
-        <div class="form-errors">
-          <% if @survey.errors.any? %>
-            <ul class="Signup_Errors">
-              <% @survey.errors.messages.each do | key, value | %>
-                <li class="text-danger"> <%= value.last.html_safe %></li>
-              <% end %>
-            </ul>
+  <div class="container">
+    <div class="col-xs-12">
+      <div class="box">
+        <div class="box-title">
+          <h2>Créer un nouveau sondage</h2>
+        </div>
+        <div class="box-content">
+          <%= form_for :survey, url: admin_surveys_path do | f | %>
+            <div class="form-group">
+              <%= label_tag 'title', "Titre du sondage" %>
+              <%= f.text_field :title, class: "form-control" %>
+            </div>
+            <div class="form-group">
+              <%= label_tag 'survey[description]', "Description du sondage" %>
+              <%= f.text_area :description, :class => "tinymce", :rows => 25, :cols => 120 %>
+            </div>
+            <div class="form-group">
+              <%= label_tag 'start_at', "Début du sondage" %>
+              <%= f.date_field :start_at  %>
+            </div>
+            <div class="form-group">
+              <%= label_tag 'end_at', "Fin du sondage" %>
+              <%= f.date_field :end_at %>
+            </div>
+            <%= f.submit :valider, class: "btn btn-primary" %>
           <% end %>
+
+          <div class="form-errors">
+            <% if @survey.errors.any? %>
+              <ul class="Signup_Errors">
+                <% @survey.errors.messages.each do | key, value | %>
+                  <li class="text-danger"> <%= value.last.html_safe %></li>
+                <% end %>
+              </ul>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
   </div>
+
 </section>
+
+<script type="text/javascript">
+
+document.addEventListener("turbolinks:load", function() {
+  tinymce.remove();
+    tinyMCE.init({
+      selector: '.tinymce'
+    });
+})
+</script>
