--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <%= stylesheet_link_tag 'admin', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'admin', 'data-turbolinks-track' => true %>
+    <%= tinymce_assets %>
+    <%= tinymce :language => "fr_FR" %>
     <%= csrf_meta_tags %>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<<<<<<< HEAD
-<<<<<<< HEAD
     <![endif]-->
   </head>
   <body class="hold-transition skin-blue fixed sidebar-mini">
@@ -30,5 +30,6 @@
       <%= render "partials/admin/footer" %>
     </div><!-- ./wrapper -->
     <%= yield :script %>
+
   </body>
 </html>
