--- a/app/views/partials/frontend/_footer.html.erb
+++ b/app/views/partials/frontend/_footer.html.erb
@@ -30,7 +30,7 @@
       <div class="container-fluid">
         <div id="mentions" class="pull-left">
           <span>all rights reserved</span>
-          <span><a href="#">mentions légales</a></span>
+          <span><%= link_to "Mentions Légales", legals_path %> </span>
           <span><a href="#">Réalisé par DeVoGreen</a></span>
         </div>
         <div class="socials pull-right">
